redefine ModelAssembler features